Added Filters and made events searchable

--- a/partials/nav.html
+++ b/partials/nav.html
@@ -8,7 +8,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="/home">Home <span class="sr-only">(current)</span></a></li>
         <li><a ng-href="/add-event">Add Event</a></li>
-        <!-- <li><a ng-href="/contact/test1">Contact</a></li> -->
+        <li><a ng-href="/event-list">Manage Event</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
