Uploading to gh-pages

--- a/view/add-event.html
+++ b/view/add-event.html
@@ -72,6 +72,18 @@
           </div>
 
           <div class="row">
+            <div class="col-md-6 col-sm-6 col-xs-12 col-lg-6">
+              <div class="form-group" ng-class="{'has-error': addEventForm.eventPrice.$touched && addEventForm.eventPrice.$invalid, 'has-success': addEventForm.eventPrice.$touched && addEventForm.eventPrice.$valid}">
+                <label for="eventName" class="control-label">Price</label>
+                <input type="text" ng-model='eventCtrl.eventForm.price' required class="form-control" name="eventPrice" placeholder="Event price">
+                <div ng-messages="addEventForm.eventPrice.$dirty && addEventForm.eventPrice.$error">
+                  <div ng-messages-include=> error-message </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
             <div class="col-sm-6 col-xs-12 col-lg-6">
               <div class="form-group">
                 <label for="eventSpecial" class="control-label">Special Event?</label>
